Get started section outlines and few articles.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,212 +4,108 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "Serverless CMS",
-    "docs": {
-      "cms-guides/basics-managing-users": {
-        "title": "basics-managing-users",
-        "sidebar_label": "WIP-basics-managing-users"
-      },
-      "cms-guides/basics-page-categories": {
-        "title": "basics-page-categories",
-        "sidebar_label": "WIP-basics-page-categories"
-      },
-      "cms-guides/basics-page-list": {
-        "title": "basics-page-list",
-        "sidebar_label": "WIP-basics-page-list"
-      },
-      "cms-guides/basics-revisions": {
-        "title": "basics-revisions",
-        "sidebar_label": "WIP-basics-revisions"
-      },
-      "cms-guides/cms-overview": {
-        "title": "cms-overview",
-        "sidebar_label": "WIP-cms-overview"
-      },
-      "cms-guides/creating-first-page": {
-        "title": "Creating your first page",
-        "sidebar_label": "Creating your first page"
-      },
-      "cms-guides/editor-blocks": {
-        "title": "editor-blocks",
-        "sidebar_label": "WIP-editor-blocks"
-      },
-      "cms-guides/editor-elements": {
-        "title": "editor-elements",
-        "sidebar_label": "WIP-editor-elements"
-      },
-      "cms-guides/editor-overview": {
-        "title": "editor-overview",
-        "sidebar_label": "WIP-editor-overview"
-      },
-      "cms-guides/editor-page-settings": {
-        "title": "editor-page-settings",
-        "sidebar_label": "WIP-editor-page-settings"
-      },
-      "cms-guides/editor-toolbar-options": {
-        "title": "editor-toolbar-options",
-        "sidebar_label": "WIP-editor-toolbar-options"
-      },
-      "cms-guides/overview": {
-        "title": "CMS Overview"
-      },
-      "cms-guides/widgets-button": {
-        "title": "widgets-button",
-        "sidebar_label": "WIP-widgets-button"
-      },
-      "cms-guides/widgets-image": {
-        "title": "widgets-image",
-        "sidebar_label": "WIP-widgets-image"
-      },
-      "cms-guides/widgets-layout-column": {
-        "title": "widgets-layout-column",
-        "sidebar_label": "WIP-widgets-layout-column"
-      },
-      "cms-guides/widgets-layout-row": {
-        "title": "widgets-layout-row",
-        "sidebar_label": "WIP-widgets-layout-row"
-      },
-      "cms-guides/widgets-layout-spaces": {
-        "title": "widgets-layout-spaces",
-        "sidebar_label": "WIP-widgets-layout-spaces"
-      },
-      "cms-guides/widgets-text": {
-        "title": "widgets-text",
-        "sidebar_label": "WIP-widgets-text"
-      },
-      "developer-tutorials/contributing": {
-        "title": "contributing",
-        "sidebar_label": "WIP-contributing"
-      },
-      "developer-tutorials/installing-locally": {
-        "title": "installing-locally",
-        "sidebar_label": "WIP-installing-locally"
-      },
-      "developer-tutorials/new-app-client": {
-        "title": "new-app-client",
-        "sidebar_label": "WIP-new-app-client"
-      },
-      "developer-tutorials/new-app-entities": {
-        "title": "new-app-entities",
-        "sidebar_label": "WIP-new-app-entities"
-      },
-      "developer-tutorials/new-app-graphql": {
-        "title": "new-app-graphql",
-        "sidebar_label": "WIP-new-app-graphql"
-      },
-      "developer-tutorials/new-app-overview": {
-        "title": "new-app-overview",
-        "sidebar_label": "WIP-new-app-overview"
-      },
-      "developer-tutorials/new-app-project-structure": {
-        "title": "new-app-project-structure",
-        "sidebar_label": "WIP-new-app-project-structure"
-      },
-      "developer-tutorials/new-app-security": {
-        "title": "new-app-security",
-        "sidebar_label": "WIP-new-app-security"
-      },
-      "developer-tutorials/new-new-app-api-basics": {
-        "title": "new-new-app-api-basics",
-        "sidebar_label": "WIP-new-new-app-api-basics"
-      },
-      "developer-tutorials/new-theme-activating-theme": {
-        "title": "new-theme-activating-theme",
-        "sidebar_label": "WIP-new-theme-activating-theme"
-      },
-      "developer-tutorials/new-theme-creating-a-theme": {
-        "title": "new-theme-creating-a-theme",
-        "sidebar_label": "WIP-new-theme-creating-a-theme"
-      },
-      "developer-tutorials/new-theme-overview": {
-        "title": "new-theme-overview",
-        "sidebar_label": "WIP-new-theme-overview"
-      },
-      "developer-tutorials/new-theme-preview-theme": {
-        "title": "new-theme-preview-theme",
-        "sidebar_label": "WIP-new-theme-preview-theme"
-      },
-      "developer-tutorials/new-widget-activating-widget": {
-        "title": "new-widget-activating-widget",
-        "sidebar_label": "WIP-new-widget-activating-widget"
-      },
-      "developer-tutorials/new-widget-creating-a-widget": {
-        "title": "new-widget-creating-a-widget",
-        "sidebar_label": "WIP-new-widget-creating-a-widget"
-      },
-      "developer-tutorials/new-widget-overview": {
-        "title": "new-widget-overview",
-        "sidebar_label": "WIP-new-widget-overview"
-      },
-      "developer-tutorials/new-widget-preview-widget": {
-        "title": "new-widget-preview-widget",
-        "sidebar_label": "WIP-new-widget-preview-widget"
-      },
-      "developer-tutorials/dev-overview": {
-        "title": "Overview"
-      },
-      "developer-tutorials/publishing-your-site": {
-        "title": "publishing-your-site",
-        "sidebar_label": "WIP-publishing-your-site"
-      },
-      "developer-tutorials/site-preparation": {
-        "title": "site-preparation",
-        "sidebar_label": "WIP-site-preparation"
-      },
-      "get-started/home": {
-        "title": "Home",
-        "sidebar_label": "WIP-Home"
-      },
-      "other/credits": {
-        "title": "credits",
-        "sidebar_label": "WIP-credits"
-      },
-      "other/faq": {
-        "title": "faq",
-        "sidebar_label": "WIP-faq"
-      },
-      "other/legal-privacy-policy": {
-        "title": "legal-privacy-policy",
-        "sidebar_label": "WIP-legal-privacy-policy"
-      },
-      "other/legal-terms-of-service": {
-        "title": "legal-terms-of-service",
-        "sidebar_label": "WIP-legal-terms-of-service"
-      },
-      "other/other-overview": {
-        "title": "Overview"
-      },
-      "reference-manual/components-entity": {
-        "title": "components-entity",
-        "sidebar_label": "WIP-components-entity"
-      },
-      "reference-manual/ref-overview": {
-        "title": "Overview"
-      },
-      "reference-manual/reference-manual-overview": {
-        "title": "reference-manual-overview",
-        "sidebar_label": "WIP-reference-manual-overview"
-      }
-    },
-    "links": {
-      "CMS Guides": "CMS Guides",
-      "Developer Tutorials": "Developer Tutorials",
-      "Reference Manual": "Reference Manual",
-      "Legal & Other": "Legal & Other"
-    },
-    "categories": {
-      "Getting Started": "Getting Started",
-      "Basics": "Basics",
-      "Page Editor": "Page Editor",
-      "Widgets": "Widgets",
-      "New Theme Tutorial": "New Theme Tutorial",
-      "New Widget Tutorial": "New Widget Tutorial",
-      "New App Tutorial": "New App Tutorial",
-      "Contributing": "Contributing",
-      "Overview": "Overview",
-      "Components": "Components",
-      "General": "General",
-      "Legal": "Legal"
-    }
+    "cms-guides/basics-managing-users": "basics-managing-users",
+    "WIP-basics-managing-users": "WIP-basics-managing-users",
+    "cms-guides/basics-page-categories": "basics-page-categories",
+    "WIP-basics-page-categories": "WIP-basics-page-categories",
+    "cms-guides/basics-page-list": "basics-page-list",
+    "WIP-basics-page-list": "WIP-basics-page-list",
+    "cms-guides/basics-revisions": "basics-revisions",
+    "WIP-basics-revisions": "WIP-basics-revisions",
+    "cms-guides/cms-overview": "cms-guides/cms-overview",
+    "cms-guides/creating-first-page": "Creating your first page",
+    "Creating your first page": "Creating your first page",
+    "cms-guides/editor-blocks": "editor-blocks",
+    "WIP-editor-blocks": "WIP-editor-blocks",
+    "cms-guides/editor-elements": "editor-elements",
+    "WIP-editor-elements": "WIP-editor-elements",
+    "cms-guides/editor-overview": "editor-overview",
+    "WIP-editor-overview": "WIP-editor-overview",
+    "cms-guides/editor-page-settings": "editor-page-settings",
+    "WIP-editor-page-settings": "WIP-editor-page-settings",
+    "cms-guides/editor-toolbar-options": "editor-toolbar-options",
+    "WIP-editor-toolbar-options": "WIP-editor-toolbar-options",
+    "cms-guides/overview": "CMS Overview",
+    "cms-guides/widgets-button": "widgets-button",
+    "WIP-widgets-button": "WIP-widgets-button",
+    "cms-guides/widgets-image": "widgets-image",
+    "WIP-widgets-image": "WIP-widgets-image",
+    "cms-guides/widgets-layout-column": "widgets-layout-column",
+    "WIP-widgets-layout-column": "WIP-widgets-layout-column",
+    "cms-guides/widgets-layout-row": "widgets-layout-row",
+    "WIP-widgets-layout-row": "WIP-widgets-layout-row",
+    "cms-guides/widgets-layout-spaces": "widgets-layout-spaces",
+    "WIP-widgets-layout-spaces": "WIP-widgets-layout-spaces",
+    "cms-guides/widgets-text": "widgets-text",
+    "WIP-widgets-text": "WIP-widgets-text",
+    "designer-tutorials/designer-get-started": "Overview",
+    "developer-tutorials/installing-locally": "installing-locally",
+    "WIP-installing-locally": "WIP-installing-locally",
+    "developer-tutorials/new-app-client": "new-app-client",
+    "WIP-new-app-client": "WIP-new-app-client",
+    "developer-tutorials/new-app-entities": "new-app-entities",
+    "WIP-new-app-entities": "WIP-new-app-entities",
+    "developer-tutorials/new-app-graphql": "new-app-graphql",
+    "WIP-new-app-graphql": "WIP-new-app-graphql",
+    "developer-tutorials/new-app-overview": "new-app-overview",
+    "WIP-new-app-overview": "WIP-new-app-overview",
+    "developer-tutorials/new-app-project-structure": "new-app-project-structure",
+    "WIP-new-app-project-structure": "WIP-new-app-project-structure",
+    "developer-tutorials/new-app-security": "new-app-security",
+    "WIP-new-app-security": "WIP-new-app-security",
+    "developer-tutorials/new-new-app-api-basics": "new-new-app-api-basics",
+    "WIP-new-new-app-api-basics": "WIP-new-new-app-api-basics",
+    "developer-tutorials/new-theme-activating-theme": "new-theme-activating-theme",
+    "WIP-new-theme-activating-theme": "WIP-new-theme-activating-theme",
+    "developer-tutorials/new-theme-creating-a-theme": "new-theme-creating-a-theme",
+    "WIP-new-theme-creating-a-theme": "WIP-new-theme-creating-a-theme",
+    "developer-tutorials/new-theme-overview": "new-theme-overview",
+    "WIP-new-theme-overview": "WIP-new-theme-overview",
+    "developer-tutorials/new-theme-preview-theme": "new-theme-preview-theme",
+    "WIP-new-theme-preview-theme": "WIP-new-theme-preview-theme",
+    "developer-tutorials/new-widget-activating-widget": "new-widget-activating-widget",
+    "WIP-new-widget-activating-widget": "WIP-new-widget-activating-widget",
+    "developer-tutorials/new-widget-creating-a-widget": "new-widget-creating-a-widget",
+    "WIP-new-widget-creating-a-widget": "WIP-new-widget-creating-a-widget",
+    "developer-tutorials/new-widget-overview": "new-widget-overview",
+    "WIP-new-widget-overview": "WIP-new-widget-overview",
+    "developer-tutorials/new-widget-preview-widget": "new-widget-preview-widget",
+    "WIP-new-widget-preview-widget": "WIP-new-widget-preview-widget",
+    "developer-tutorials/dev-overview": "Overview",
+    "developer-tutorials/publishing-your-site": "publishing-your-site",
+    "WIP-publishing-your-site": "WIP-publishing-your-site",
+    "developer-tutorials/site-preparation": "site-preparation",
+    "WIP-site-preparation": "WIP-site-preparation",
+    "get-started": "Get Started",
+    "Get Started": "Get Started",
+    "other/contributing": "Contribution Guide",
+    "Contribution Guide": "Contribution Guide",
+    "other/credits": "Credits",
+    "Credits": "Credits",
+    "other/legal-privacy-policy": "Privacy Policy",
+    "Privacy Policy": "Privacy Policy",
+    "other/legal-terms-of-service": "Terms of Service",
+    "Terms of Service": "Terms of Service",
+    "reference-manual/components-entity": "components-entity",
+    "WIP-components-entity": "WIP-components-entity",
+    "reference-manual/ref-overview": "Overview",
+    "reference-manual/reference-manual-overview": "reference-manual-overview",
+    "WIP-reference-manual-overview": "WIP-reference-manual-overview",
+    "CMS Guides": "CMS Guides",
+    "Developer Tutorials": "Developer Tutorials",
+    "Designer Tutorials": "Designer Tutorials",
+    "Documentation": "Documentation",
+    "Legal": "Legal",
+    "Other": "Other",
+    "Getting Started": "Getting Started",
+    "Basics": "Basics",
+    "Page Editor": "Page Editor",
+    "Widgets": "Widgets",
+    "New Theme Tutorial": "New Theme Tutorial",
+    "New Widget Tutorial": "New Widget Tutorial",
+    "New App Tutorial": "New App Tutorial",
+    "Overview": "Overview",
+    "Components": "Components"
   },
   "pages-strings": {
     "Learn more using the [documentation on this site.](/test-site/docs/en/doc1.html)|no description given": "Learn more using the [documentation on this site.](/test-site/docs/en/doc1.html)",
