--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -41,9 +41,13 @@
         "title": "editor-toolbar-options",
         "sidebar_label": "WIP-editor-toolbar-options"
       },
+      "cms-guides/get-started-create-a-page-category": {
+        "title": "Create a Page Category",
+        "sidebar_label": "Create a Page Category"
+      },
       "cms-guides/get-started-create-a-webiny-website": {
-        "title": "Installing Webiny",
-        "sidebar_label": "Installing Webiny"
+        "title": "Create a Website",
+        "sidebar_label": "Create a Website"
       },
       "cms-guides/get-started-creating-first-page": {
         "title": "Creating your first page",
@@ -52,6 +56,14 @@
       "cms-guides/get-started-overview": {
         "title": "Overview",
         "sidebar_label": "Overview"
+      },
+      "cms-guides/get-started-point-your-domain-to-webiny": {
+        "title": "Point your domain to Webiny",
+        "sidebar_label": "Point your domain to Webiny"
+      },
+      "cms-guides/get-started-webiny-administration": {
+        "title": "Webiny Administration",
+        "sidebar_label": "Webiny Administration"
       },
       "cms-guides/widgets-button": {
         "title": "widgets-button",
