--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -22,18 +22,18 @@
     "WIP-editor-page-settings": "WIP-editor-page-settings",
     "cms-guides/editor-toolbar-options": "editor-toolbar-options",
     "WIP-editor-toolbar-options": "WIP-editor-toolbar-options",
-    "cms-guides/get-started-create-a-page-category": "Create a Page Category",
-    "Create a Page Category": "Create a Page Category",
-    "cms-guides/get-started-create-a-webiny-website": "Create a Website",
-    "Create a Website": "Create a Website",
-    "cms-guides/get-started-creating-first-page": "Creating your first page",
-    "Creating your first page": "Creating your first page",
+    "cms-guides/get-started-create-a-page-category": "Create a page category",
+    "Create a page category": "Create a page category",
+    "cms-guides/get-started-create-a-webiny-website": "Create a website",
+    "Create a website": "Create a website",
+    "cms-guides/get-started-creating-first-page": "Create your first page",
+    "Create your first page": "Create your first page",
     "cms-guides/get-started-overview": "Overview",
     "Overview": "Overview",
     "cms-guides/get-started-point-your-domain-to-webiny": "Point your domain to Webiny",
     "Point your domain to Webiny": "Point your domain to Webiny",
-    "cms-guides/get-started-webiny-administration": "Webiny Administration",
-    "Webiny Administration": "Webiny Administration",
+    "cms-guides/get-started-webiny-administration": "Webiny administration",
+    "Webiny administration": "Webiny administration",
     "cms-guides/widgets-button": "widgets-button",
     "WIP-widgets-button": "WIP-widgets-button",
     "cms-guides/widgets-image": "widgets-image",
