Page list documentation.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -8,8 +8,8 @@
     "WIP-basics-managing-users": "WIP-basics-managing-users",
     "cms-guides/basics-page-categories": "basics-page-categories",
     "WIP-basics-page-categories": "WIP-basics-page-categories",
-    "cms-guides/basics-page-list": "basics-page-list",
-    "WIP-basics-page-list": "WIP-basics-page-list",
+    "cms-guides/basics-page-list": "Page list",
+    "Page list": "Page list",
     "cms-guides/basics-revisions": "basics-revisions",
     "WIP-basics-revisions": "WIP-basics-revisions",
     "cms-guides/editor-blocks": "editor-blocks",
