--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -133,8 +133,8 @@
         "sidebar_label": "WIP-new-theme-creating-a-theme"
       },
       "developer-tutorials/new-theme-overview": {
-        "title": "new-theme-overview",
-        "sidebar_label": "WIP-new-theme-overview"
+        "title": "Webiny Theme Tutorial Overview",
+        "sidebar_label": "Overview"
       },
       "developer-tutorials/new-theme-preview-theme": {
         "title": "new-theme-preview-theme",
