Developer guide - getting started.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -92,9 +92,9 @@
       "designer-tutorials/designer-get-started": {
         "title": "Overview"
       },
-      "developer-tutorials/installing-locally": {
-        "title": "installing-locally",
-        "sidebar_label": "WIP-installing-locally"
+      "developer-tutorials/local-setup": {
+        "title": "Setting up a local project",
+        "sidebar_label": "Setting up a local project"
       },
       "developer-tutorials/new-app-client": {
         "title": "new-app-client",
@@ -159,9 +159,9 @@
       "developer-tutorials/dev-overview": {
         "title": "Overview"
       },
-      "developer-tutorials/publishing-your-site": {
-        "title": "publishing-your-site",
-        "sidebar_label": "WIP-publishing-your-site"
+      "developer-tutorials/deploy-local-project": {
+        "title": "Deploying your project",
+        "sidebar_label": "Deploying your project"
       },
       "developer-tutorials/site-preparation": {
         "title": "site-preparation",
