Plugin and theme docs.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -124,40 +124,40 @@
         "title": "new-new-app-api-basics",
         "sidebar_label": "WIP-new-new-app-api-basics"
       },
-      "developer-tutorials/new-theme-activating-theme": {
-        "title": "new-theme-activating-theme",
-        "sidebar_label": "WIP-new-theme-activating-theme"
-      },
-      "developer-tutorials/new-theme-creating-a-theme": {
-        "title": "new-theme-creating-a-theme",
-        "sidebar_label": "WIP-new-theme-creating-a-theme"
+      "developer-tutorials/new-theme-creating-theme": {
+        "title": "Creating a theme",
+        "sidebar_label": "Creating a theme"
       },
       "developer-tutorials/new-theme-overview": {
         "title": "Webiny Theme Tutorial Overview",
         "sidebar_label": "Overview"
       },
-      "developer-tutorials/new-theme-preview-theme": {
-        "title": "new-theme-preview-theme",
-        "sidebar_label": "WIP-new-theme-preview-theme"
+      "developer-tutorials/new-theme-using-theme": {
+        "title": "Using your theme",
+        "sidebar_label": "Using your theme"
       },
-      "developer-tutorials/new-widget-activating-widget": {
-        "title": "new-widget-activating-widget",
-        "sidebar_label": "WIP-new-widget-activating-widget"
+      "developer-tutorials/new-element-activating-widget": {
+        "title": "new-element-activating-widget",
+        "sidebar_label": "WIP-new-element-activating-widget"
       },
-      "developer-tutorials/new-widget-creating-a-widget": {
-        "title": "new-widget-creating-a-widget",
-        "sidebar_label": "WIP-new-widget-creating-a-widget"
+      "developer-tutorials/new-element-creating-a-widget": {
+        "title": "new-element-creating-a-widget",
+        "sidebar_label": "WIP-new-element-creating-a-widget"
       },
-      "developer-tutorials/new-widget-overview": {
-        "title": "new-widget-overview",
-        "sidebar_label": "WIP-new-widget-overview"
+      "developer-tutorials/new-element-overview": {
+        "title": "new-element-overview",
+        "sidebar_label": "WIP-new-element-overview"
       },
-      "developer-tutorials/new-widget-preview-widget": {
-        "title": "new-widget-preview-widget",
-        "sidebar_label": "WIP-new-widget-preview-widget"
+      "developer-tutorials/new-element-preview-widget": {
+        "title": "new-element-preview-widget",
+        "sidebar_label": "WIP-new-element-preview-widget"
       },
       "developer-tutorials/dev-overview": {
         "title": "Overview"
+      },
+      "developer-tutorials/plugins-crash-course": {
+        "title": "Plugins crash course",
+        "sidebar_label": "Crash course"
       },
       "developer-tutorials/deploy-local-project": {
         "title": "Deploying your project",
@@ -179,14 +179,6 @@
         "title": "Credits",
         "sidebar_label": "Credits"
       },
-      "other/legal-privacy-policy": {
-        "title": "Privacy Policy",
-        "sidebar_label": "Privacy Policy"
-      },
-      "other/legal-terms-of-service": {
-        "title": "Terms of Service",
-        "sidebar_label": "Terms of Service"
-      },
       "reference-manual/components-entity": {
         "title": "components-entity",
         "sidebar_label": "WIP-components-entity"
@@ -207,14 +199,14 @@
     },
     "categories": {
       "Documentation": "Documentation",
-      "Legal": "Legal",
       "Other": "Other",
       "Getting Started": "Getting Started",
       "Basics": "Basics",
       "Page Editor": "Page Editor",
       "Widgets": "Widgets",
+      "Plugins": "Plugins",
       "New Theme Tutorial": "New Theme Tutorial",
-      "New Widget Tutorial": "New Widget Tutorial",
+      "New Element Tutorial": "New Element Tutorial",
       "New App Tutorial": "New App Tutorial",
       "Get Started": "Get Started",
       "Overview": "Overview",
