--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -41,6 +41,30 @@
         "title": "editor-toolbar-options",
         "sidebar_label": "WIP-editor-toolbar-options"
       },
+      "cms-guides/elements-button": {
+        "title": "elements-button",
+        "sidebar_label": "WIP-elements-button"
+      },
+      "cms-guides/elements-image": {
+        "title": "elements-image",
+        "sidebar_label": "WIP-elements-image"
+      },
+      "cms-guides/elements-layout-column": {
+        "title": "elements-layout-column",
+        "sidebar_label": "WIP-elements-layout-column"
+      },
+      "cms-guides/elements-layout-row": {
+        "title": "elements-layout-row",
+        "sidebar_label": "WIP-elements-layout-row"
+      },
+      "cms-guides/elements-layout-spaces": {
+        "title": "elements-layout-spaces",
+        "sidebar_label": "WIP-elements-layout-spaces"
+      },
+      "cms-guides/elements-text": {
+        "title": "elements-text",
+        "sidebar_label": "WIP-elements-text"
+      },
       "cms-guides/get-started-create-a-page-category": {
         "title": "Create a page category",
         "sidebar_label": "Create a page category"
@@ -65,32 +89,24 @@
         "title": "Webiny administration",
         "sidebar_label": "Webiny administration"
       },
-      "cms-guides/widgets-button": {
-        "title": "widgets-button",
-        "sidebar_label": "WIP-widgets-button"
-      },
-      "cms-guides/widgets-image": {
-        "title": "widgets-image",
-        "sidebar_label": "WIP-widgets-image"
-      },
-      "cms-guides/widgets-layout-column": {
-        "title": "widgets-layout-column",
-        "sidebar_label": "WIP-widgets-layout-column"
-      },
-      "cms-guides/widgets-layout-row": {
-        "title": "widgets-layout-row",
-        "sidebar_label": "WIP-widgets-layout-row"
-      },
-      "cms-guides/widgets-layout-spaces": {
-        "title": "widgets-layout-spaces",
-        "sidebar_label": "WIP-widgets-layout-spaces"
-      },
-      "cms-guides/widgets-text": {
-        "title": "widgets-text",
-        "sidebar_label": "WIP-widgets-text"
-      },
       "designer-tutorials/designer-get-started": {
         "title": "Overview"
+      },
+      "developer-tutorials/cms-element-activating-element": {
+        "title": "cms-element-activating-element",
+        "sidebar_label": "WIP-cms-element-activating-element"
+      },
+      "developer-tutorials/cms-element-creating-editor-plugin": {
+        "title": "CMS Element - Creating editor plugin",
+        "sidebar_label": "Creating editor plugin"
+      },
+      "developer-tutorials/cms-element-creating-element-group": {
+        "title": "CMS Element - Creating element group",
+        "sidebar_label": "Creating element group"
+      },
+      "developer-tutorials/cms-element-overview": {
+        "title": "CMS Element - Overview",
+        "sidebar_label": "Overview"
       },
       "developer-tutorials/local-setup": {
         "title": "Setting up a local project",
@@ -135,22 +151,6 @@
       "developer-tutorials/new-theme-using-theme": {
         "title": "Using your theme",
         "sidebar_label": "Using your theme"
-      },
-      "developer-tutorials/new-element-activating-widget": {
-        "title": "new-element-activating-widget",
-        "sidebar_label": "WIP-new-element-activating-widget"
-      },
-      "developer-tutorials/new-element-creating-a-widget": {
-        "title": "new-element-creating-a-widget",
-        "sidebar_label": "WIP-new-element-creating-a-widget"
-      },
-      "developer-tutorials/new-element-overview": {
-        "title": "new-element-overview",
-        "sidebar_label": "WIP-new-element-overview"
-      },
-      "developer-tutorials/new-element-preview-widget": {
-        "title": "new-element-preview-widget",
-        "sidebar_label": "WIP-new-element-preview-widget"
       },
       "developer-tutorials/dev-overview": {
         "title": "Overview"
@@ -203,10 +203,10 @@
       "Getting Started": "Getting Started",
       "Basics": "Basics",
       "Page Editor": "Page Editor",
-      "Widgets": "Widgets",
+      "Elements": "Elements",
       "Plugins": "Plugins",
-      "New Theme Tutorial": "New Theme Tutorial",
-      "New Element Tutorial": "New Element Tutorial",
+      "Theme Tutorial": "Theme Tutorial",
+      "CMS Element Tutorial": "CMS Element Tutorial",
       "New App Tutorial": "New App Tutorial",
       "Get Started": "Get Started",
       "Overview": "Overview",
