CMS element docs (WIP).

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -104,6 +104,10 @@
         "title": "CMS Element - Creating element group",
         "sidebar_label": "Creating element group"
       },
+      "developer-tutorials/cms-element-creating-render-plugin": {
+        "title": "CMS Element - Creating render plugin",
+        "sidebar_label": "Creating render plugin"
+      },
       "developer-tutorials/cms-element-overview": {
         "title": "CMS Element - Overview",
         "sidebar_label": "Overview"
