Finished element docs.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -108,6 +108,10 @@
         "title": "CMS Element - Creating render plugin",
         "sidebar_label": "Creating render plugin"
       },
+      "developer-tutorials/cms-element-creating-settings-plugin": {
+        "title": "CMS Element - Creating settings plugin",
+        "sidebar_label": "Creating settings plugin"
+      },
       "developer-tutorials/cms-element-overview": {
         "title": "CMS Element - Overview",
         "sidebar_label": "Overview"
