Admin app tutorial.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -92,9 +92,17 @@
       "designer-tutorials/designer-get-started": {
         "title": "Overview"
       },
-      "developer-tutorials/cms-element-activating-element": {
-        "title": "cms-element-activating-element",
-        "sidebar_label": "WIP-cms-element-activating-element"
+      "developer-tutorials/admin-app-menu": {
+        "title": "Admin App - Menu",
+        "sidebar_label": "Menu"
+      },
+      "developer-tutorials/admin-app-overview": {
+        "title": "Admin App - Overview",
+        "sidebar_label": "Overview"
+      },
+      "developer-tutorials/admin-app-route": {
+        "title": "Admin App - Routes",
+        "sidebar_label": "Routes"
       },
       "developer-tutorials/cms-element-creating-editor-plugin": {
         "title": "CMS Element - Creating editor plugin",
@@ -120,34 +128,6 @@
         "title": "Setting up a local project",
         "sidebar_label": "Setting up a local project"
       },
-      "developer-tutorials/new-app-client": {
-        "title": "new-app-client",
-        "sidebar_label": "WIP-new-app-client"
-      },
-      "developer-tutorials/new-app-entities": {
-        "title": "new-app-entities",
-        "sidebar_label": "WIP-new-app-entities"
-      },
-      "developer-tutorials/new-app-graphql": {
-        "title": "new-app-graphql",
-        "sidebar_label": "WIP-new-app-graphql"
-      },
-      "developer-tutorials/new-app-overview": {
-        "title": "new-app-overview",
-        "sidebar_label": "WIP-new-app-overview"
-      },
-      "developer-tutorials/new-app-project-structure": {
-        "title": "new-app-project-structure",
-        "sidebar_label": "WIP-new-app-project-structure"
-      },
-      "developer-tutorials/new-app-security": {
-        "title": "new-app-security",
-        "sidebar_label": "WIP-new-app-security"
-      },
-      "developer-tutorials/new-new-app-api-basics": {
-        "title": "new-new-app-api-basics",
-        "sidebar_label": "WIP-new-new-app-api-basics"
-      },
       "developer-tutorials/new-theme-creating-theme": {
         "title": "Creating a theme",
         "sidebar_label": "Creating a theme"
@@ -170,10 +150,6 @@
       "developer-tutorials/deploy-local-project": {
         "title": "Deploying your project",
         "sidebar_label": "Deploying your project"
-      },
-      "developer-tutorials/site-preparation": {
-        "title": "site-preparation",
-        "sidebar_label": "WIP-site-preparation"
       },
       "get-started": {
         "title": "Get Started",
@@ -215,7 +191,7 @@
       "Plugins": "Plugins",
       "Theme Tutorial": "Theme Tutorial",
       "CMS Element Tutorial": "CMS Element Tutorial",
-      "New App Tutorial": "New App Tutorial",
+      "Admin App Tutorial": "Admin App Tutorial",
       "Get Started": "Get Started",
       "Overview": "Overview",
       "Components": "Components"
