Added media to enrich cms basic pages

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,198 +4,100 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "Serverless CMS",
-    "docs": {
-      "cms-guides/basics-managing-users": {
-        "title": "basics-managing-users",
-        "sidebar_label": "WIP-basics-managing-users"
-      },
-      "cms-guides/basics-page-categories": {
-        "title": "basics-page-categories",
-        "sidebar_label": "WIP-basics-page-categories"
-      },
-      "cms-guides/basics-page-list": {
-        "title": "Page list",
-        "sidebar_label": "Page list"
-      },
-      "cms-guides/basics-revisions": {
-        "title": "basics-revisions",
-        "sidebar_label": "WIP-basics-revisions"
-      },
-      "cms-guides/editor-blocks": {
-        "title": "editor-blocks",
-        "sidebar_label": "WIP-editor-blocks"
-      },
-      "cms-guides/editor-elements": {
-        "title": "editor-elements",
-        "sidebar_label": "WIP-editor-elements"
-      },
-      "cms-guides/editor-overview": {
-        "title": "editor-overview",
-        "sidebar_label": "WIP-editor-overview"
-      },
-      "cms-guides/editor-page-settings": {
-        "title": "editor-page-settings",
-        "sidebar_label": "WIP-editor-page-settings"
-      },
-      "cms-guides/editor-toolbar-options": {
-        "title": "editor-toolbar-options",
-        "sidebar_label": "WIP-editor-toolbar-options"
-      },
-      "cms-guides/elements-button": {
-        "title": "elements-button",
-        "sidebar_label": "WIP-elements-button"
-      },
-      "cms-guides/elements-image": {
-        "title": "elements-image",
-        "sidebar_label": "WIP-elements-image"
-      },
-      "cms-guides/elements-layout-column": {
-        "title": "elements-layout-column",
-        "sidebar_label": "WIP-elements-layout-column"
-      },
-      "cms-guides/elements-layout-row": {
-        "title": "elements-layout-row",
-        "sidebar_label": "WIP-elements-layout-row"
-      },
-      "cms-guides/elements-layout-spaces": {
-        "title": "elements-layout-spaces",
-        "sidebar_label": "WIP-elements-layout-spaces"
-      },
-      "cms-guides/elements-text": {
-        "title": "elements-text",
-        "sidebar_label": "WIP-elements-text"
-      },
-      "cms-guides/get-started-create-a-page-category": {
-        "title": "Create a page category",
-        "sidebar_label": "Create a page category"
-      },
-      "cms-guides/get-started-create-a-webiny-website": {
-        "title": "Create a website",
-        "sidebar_label": "Create a website"
-      },
-      "cms-guides/get-started-creating-first-page": {
-        "title": "Create your first page",
-        "sidebar_label": "Create your first page"
-      },
-      "cms-guides/get-started-overview": {
-        "title": "Overview",
-        "sidebar_label": "Overview"
-      },
-      "cms-guides/get-started-point-your-domain-to-webiny": {
-        "title": "Point your domain to Webiny",
-        "sidebar_label": "Point your domain to Webiny"
-      },
-      "cms-guides/get-started-webiny-administration": {
-        "title": "Webiny administration",
-        "sidebar_label": "Webiny administration"
-      },
-      "designer-tutorials/designer-get-started": {
-        "title": "Overview"
-      },
-      "developer-tutorials/admin-app-menu": {
-        "title": "Admin App - Menu",
-        "sidebar_label": "Menu"
-      },
-      "developer-tutorials/admin-app-overview": {
-        "title": "Admin App - Overview",
-        "sidebar_label": "Overview"
-      },
-      "developer-tutorials/admin-app-route": {
-        "title": "Admin App - Routes",
-        "sidebar_label": "Routes"
-      },
-      "developer-tutorials/cms-element-creating-editor-plugin": {
-        "title": "CMS Element - Creating editor plugin",
-        "sidebar_label": "Creating editor plugin"
-      },
-      "developer-tutorials/cms-element-creating-element-group": {
-        "title": "CMS Element - Creating element group",
-        "sidebar_label": "Creating element group"
-      },
-      "developer-tutorials/cms-element-creating-render-plugin": {
-        "title": "CMS Element - Creating render plugin",
-        "sidebar_label": "Creating render plugin"
-      },
-      "developer-tutorials/cms-element-creating-settings-plugin": {
-        "title": "CMS Element - Creating settings plugin",
-        "sidebar_label": "Creating settings plugin"
-      },
-      "developer-tutorials/cms-element-overview": {
-        "title": "CMS Element - Overview",
-        "sidebar_label": "Overview"
-      },
-      "developer-tutorials/local-setup": {
-        "title": "Setting up a local project",
-        "sidebar_label": "Setting up a local project"
-      },
-      "developer-tutorials/new-theme-creating-theme": {
-        "title": "Creating a theme",
-        "sidebar_label": "Creating a theme"
-      },
-      "developer-tutorials/new-theme-overview": {
-        "title": "Webiny Theme Tutorial Overview",
-        "sidebar_label": "Overview"
-      },
-      "developer-tutorials/new-theme-using-theme": {
-        "title": "Using your theme",
-        "sidebar_label": "Using your theme"
-      },
-      "developer-tutorials/dev-overview": {
-        "title": "Overview"
-      },
-      "developer-tutorials/plugins-crash-course": {
-        "title": "Plugins crash course",
-        "sidebar_label": "Crash course"
-      },
-      "developer-tutorials/deploy-local-project": {
-        "title": "Deploying your project",
-        "sidebar_label": "Deploying your project"
-      },
-      "get-started": {
-        "title": "Get Started",
-        "sidebar_label": "Get Started"
-      },
-      "other/contributing": {
-        "title": "Contribution Guide",
-        "sidebar_label": "Contribution Guide"
-      },
-      "other/credits": {
-        "title": "Credits",
-        "sidebar_label": "Credits"
-      },
-      "reference-manual/components-entity": {
-        "title": "components-entity",
-        "sidebar_label": "WIP-components-entity"
-      },
-      "reference-manual/ref-overview": {
-        "title": "Overview"
-      },
-      "reference-manual/reference-manual-overview": {
-        "title": "reference-manual-overview",
-        "sidebar_label": "WIP-reference-manual-overview"
-      }
-    },
-    "links": {
-      "Get Started": "Get Started",
-      "CMS Guides": "CMS Guides",
-      "Developer Tutorials": "Developer Tutorials",
-      "Designer Tutorials": "Designer Tutorials"
-    },
-    "categories": {
-      "Documentation": "Documentation",
-      "Other": "Other",
-      "Getting Started": "Getting Started",
-      "Basics": "Basics",
-      "Page Editor": "Page Editor",
-      "Elements": "Elements",
-      "Plugins": "Plugins",
-      "Theme Tutorial": "Theme Tutorial",
-      "CMS Element Tutorial": "CMS Element Tutorial",
-      "Admin App Tutorial": "Admin App Tutorial",
-      "Get Started": "Get Started",
-      "Overview": "Overview",
-      "Components": "Components"
-    }
+    "cms-guides/basics-managing-users": "basics-managing-users",
+    "WIP-basics-managing-users": "WIP-basics-managing-users",
+    "cms-guides/basics-page-categories": "basics-page-categories",
+    "WIP-basics-page-categories": "WIP-basics-page-categories",
+    "cms-guides/basics-page-list": "Page list",
+    "Page list": "Page list",
+    "cms-guides/basics-revisions": "basics-revisions",
+    "WIP-basics-revisions": "WIP-basics-revisions",
+    "cms-guides/editor-blocks": "editor-blocks",
+    "WIP-editor-blocks": "WIP-editor-blocks",
+    "cms-guides/editor-elements": "editor-elements",
+    "WIP-editor-elements": "WIP-editor-elements",
+    "cms-guides/editor-overview": "editor-overview",
+    "WIP-editor-overview": "WIP-editor-overview",
+    "cms-guides/editor-page-settings": "editor-page-settings",
+    "WIP-editor-page-settings": "WIP-editor-page-settings",
+    "cms-guides/editor-toolbar-options": "editor-toolbar-options",
+    "WIP-editor-toolbar-options": "WIP-editor-toolbar-options",
+    "cms-guides/elements-button": "elements-button",
+    "WIP-elements-button": "WIP-elements-button",
+    "cms-guides/elements-image": "elements-image",
+    "WIP-elements-image": "WIP-elements-image",
+    "cms-guides/elements-layout-column": "elements-layout-column",
+    "WIP-elements-layout-column": "WIP-elements-layout-column",
+    "cms-guides/elements-layout-row": "elements-layout-row",
+    "WIP-elements-layout-row": "WIP-elements-layout-row",
+    "cms-guides/elements-layout-spaces": "elements-layout-spaces",
+    "WIP-elements-layout-spaces": "WIP-elements-layout-spaces",
+    "cms-guides/elements-text": "elements-text",
+    "WIP-elements-text": "WIP-elements-text",
+    "cms-guides/get-started-create-a-page-category": "Create a page category",
+    "Create a page category": "Create a page category",
+    "cms-guides/get-started-create-a-webiny-website": "Create a website",
+    "Create a website": "Create a website",
+    "cms-guides/get-started-creating-first-page": "Create your first page",
+    "Create your first page": "Create your first page",
+    "cms-guides/get-started-overview": "Overview",
+    "Overview": "Overview",
+    "cms-guides/get-started-point-your-domain-to-webiny": "Point your domain to Webiny",
+    "Point your domain to Webiny": "Point your domain to Webiny",
+    "cms-guides/get-started-webiny-administration": "Webiny administration",
+    "Webiny administration": "Webiny administration",
+    "designer-tutorials/designer-get-started": "Overview",
+    "developer-tutorials/admin-app-menu": "Admin App - Menu",
+    "Menu": "Menu",
+    "developer-tutorials/admin-app-overview": "Admin App - Overview",
+    "developer-tutorials/admin-app-route": "Admin App - Routes",
+    "Routes": "Routes",
+    "developer-tutorials/cms-element-creating-editor-plugin": "CMS Element - Creating editor plugin",
+    "Creating editor plugin": "Creating editor plugin",
+    "developer-tutorials/cms-element-creating-element-group": "CMS Element - Creating element group",
+    "Creating element group": "Creating element group",
+    "developer-tutorials/cms-element-creating-render-plugin": "CMS Element - Creating render plugin",
+    "Creating render plugin": "Creating render plugin",
+    "developer-tutorials/cms-element-creating-settings-plugin": "CMS Element - Creating settings plugin",
+    "Creating settings plugin": "Creating settings plugin",
+    "developer-tutorials/cms-element-overview": "CMS Element - Overview",
+    "developer-tutorials/local-setup": "Setting up a local project",
+    "Setting up a local project": "Setting up a local project",
+    "developer-tutorials/new-theme-creating-theme": "Creating a theme",
+    "Creating a theme": "Creating a theme",
+    "developer-tutorials/new-theme-overview": "Webiny Theme Tutorial Overview",
+    "developer-tutorials/new-theme-using-theme": "Using your theme",
+    "Using your theme": "Using your theme",
+    "developer-tutorials/dev-overview": "Overview",
+    "developer-tutorials/plugins-crash-course": "Plugins crash course",
+    "Crash course": "Crash course",
+    "developer-tutorials/deploy-local-project": "Deploying your project",
+    "Deploying your project": "Deploying your project",
+    "get-started": "Get Started",
+    "Get Started": "Get Started",
+    "other/contributing": "Contribution Guide",
+    "Contribution Guide": "Contribution Guide",
+    "other/credits": "Credits",
+    "Credits": "Credits",
+    "reference-manual/components-entity": "components-entity",
+    "WIP-components-entity": "WIP-components-entity",
+    "reference-manual/ref-overview": "Overview",
+    "reference-manual/reference-manual-overview": "reference-manual-overview",
+    "WIP-reference-manual-overview": "WIP-reference-manual-overview",
+    "CMS Guides": "CMS Guides",
+    "Developer Tutorials": "Developer Tutorials",
+    "Designer Tutorials": "Designer Tutorials",
+    "Documentation": "Documentation",
+    "Other": "Other",
+    "Getting Started": "Getting Started",
+    "Basics": "Basics",
+    "Page Editor": "Page Editor",
+    "Elements": "Elements",
+    "Plugins": "Plugins",
+    "Theme Tutorial": "Theme Tutorial",
+    "CMS Element Tutorial": "CMS Element Tutorial",
+    "Admin App Tutorial": "Admin App Tutorial",
+    "Components": "Components"
   },
   "pages-strings": {
     "Learn more using the [documentation on this site.](/test-site/docs/en/doc1.html)|no description given": "Learn more using the [documentation on this site.](/test-site/docs/en/doc1.html)",
