Theme tutorial update

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -179,7 +179,7 @@
       "Get Started": "Get Started",
       "CMS Guides": "CMS Guides",
       "Developer Tutorials": "Developer Tutorials",
-      "Source": "Source"
+      "GitHub": "GitHub"
     },
     "categories": {
       "Documentation": "Documentation",
